add rain effect miniProject

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3>Running Mario</h3>
         </span>
       </a>
-
+      
       <div class="container carousel-box">
         <h3>Carousel</h3>
       </div>
@@ -54,6 +54,11 @@
         <div class="loader"></div>
         <h3>Spinning Loader</h3>
       </div>
+
+
+      <a href="rain.html" target="_blank" class="container rain-box">
+          <h3>Rain Effect</h3>
+      </a>
     </div>
   </body>
 </html>
