--- a/index.html
+++ b/index.html
@@ -3,27 +3,135 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LearningCSS</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Portfolio using CSS</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>I am Piyush Das and I am trying to learn css to maximize my skills.</h1>
-    <p>
-      I hope I don't procastinate this time. I am following
-      <span
-        ><a
-          style="text-decoration: none; color: red; font-weight: bold"
-          href="https://youtu.be/MSICFljRcb4"
-          target="_blank"
-          >Thapa Technical's CSS Course.</a
-        ></span
-      >
-      Wish me Luck :(
-    </p>
-    <hr />
-    <h2>Below are the projects I created during my learning phase.</h2>
+    <div class="main-container">
+      <!-- sidebar -->
+      <div class="sidebar">
+        <!-- profile -->
+        <div class="profile">
+          <img src="images/MyPfp.webp" alt="myPfp" />
+          <h2>Piyush Baniya</h2>
+          <p>Learning WebDev</p>
+        </div>
 
-    <div class="parent">
+        <!-- contact -->
+        <div class="contact">
+          <div class="email">
+            <h3 class="label">Email</h3>
+            <a href="mailto:baniyapiyush0810@gmail.com" class="value"
+              >baniyapiyush0810@gmail.com</a
+            >
+          </div>
+          <div class="location">
+            <h3 class="label">Country</h3>
+            <p class="value">Nepal</p>
+          </div>
+        </div>
+
+        <!-- social -->
+        <div class="social">
+          <a href="https://github.com/piyush-baniya"
+            ><img src="https://simpleicons.org/icons/github.svg" alt="github"
+          /></a>
+          <a href="https://www.linkedin.com/in/piyush-das-baniya/"
+            ><img
+              src="https://www.svgrepo.com/show/144030/linkedin-square-logo.svg"
+              alt="github"
+          /></a>
+        </div>
+      </div>
+
+      <!-- main-content -->
+      <div class="main-content">
+        <!-- Navbar -->
+        <div class="navbar">
+          <nav>
+            <a href="#aboutMe" class="active">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#education">Education</a>
+            <a href="#projects">Projects</a>
+          </nav>
+        </div>
+
+        <!-- About Me -->
+        <div id="aboutMe">
+          <h2 class="heading">About Me</h2>
+          <div class="line"></div>
+          <p>
+            I am Piyush Das and I am currently learning CSS to maximize my
+            skills. I created this portfolio site watching
+            <span
+              ><a href="https://youtu.be/dMD8ceVzdQs">Coder Army video</a></span
+            >. His video helped me gain confidence with CSS.
+          </p>
+        </div>
+
+        <!-- My Skills -->
+        <div id="skills">
+          <h2 class="heading">My Skills</h2>
+          <div class="line"></div>
+          <div class="grid-container">
+            <div class="item">
+              <img src="https://simpleicons.org/icons/html5.svg" alt="" />
+              <h3>HTML5</h3>
+            </div>
+            <div class="item">
+              <img src="https://simpleicons.org/icons/css.svg" alt="" />
+              <h3>CSS3</h3>
+            </div>
+            <div class="item">
+              <img src="https://simpleicons.org/icons/javascript.svg" alt="" />
+              <h3>JavaScript</h3>
+            </div>
+            <div class="item">
+              <img src="https://simpleicons.org/icons/react.svg" alt="" />
+              <h3>React</h3>
+            </div>
+            <div class="item">
+              <img src="https://simpleicons.org/icons/python.svg" alt="" />
+              <h3>Python</h3>
+            </div>
+            <div class="item">
+              <img src="https://simpleicons.org/icons/django.svg" alt="" />
+              <h3>Django</h3>
+            </div>
+          </div>
+        </div>
+
+        <!-- Education -->
+        <div id="education">
+          <h2 class="heading">Education</h2>
+          <div class="line"></div>
+          <div class="edu">
+            <div class="eduFirst">
+              <div class="year">2025-2029</div>
+              <h3 class="degree">Bachelor's in Information Technology</h3>
+              <p class="college">Bhaktapur Multiple Campus (IOST, TU)</p>
+              <div class="goal"></div>
+            </div>
+            <div class="eduSecond">
+              <div class="year">2023-2025</div>
+              <h3 class="degree">Plus 2, Science</h3>
+              <p class="college">Kanjirowa National School</p>
+              <div class="goal"></div>
+            </div>
+
+            <div class="liner"></div>
+          </div>
+        </div>
+
+        <!-- Projects -->
+        <div id="projects">
+          <h2 class="heading">Projects</h2>
+          <div class="line"></div>
+
+
+
+
+          <div class="parent">
       <a href="parallax.html" target="_blank" class="container parallax-box">
         <h3>Parallax Effect</h3>
       </a>
@@ -59,6 +167,13 @@
       <a href="rain.html" target="_blank" class="container rain-box">
           <h3>Rain Effect</h3>
       </a>
+    </div>
+
+
+
+    
+        </div>
+      </div>
     </div>
   </body>
 </html>
