--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio using CSS</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/MyPfp.webp" type="image/x-icon">
   </head>
   <body>
     <div class="main-container">
